# lakebench-k8s

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  conftest.py  install.sh  lakebench.spec  lakebench.yaml  lbrun.py  pyproject.toml
.claude/skills/execute/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/snapshot/: SKILL.md
.claude/skills/uat/: SKILL.md
.github/workflows/: binary.yml  ci.yml  release.yml
datagen/: Dockerfile  generate.py  requirements.txt
docs/: README.md  architecture.md  benchmarking.md  cli-reference.md  compatibility-matrix.md  component-duckdb.md  component-hive.md  component-observability.md  component-polaris.md  component-postgres.md  component-s3.md  component-spark-thrift.md  component-spark.md  component-trino.md  configuration.md  contributing.md  data-generation.md  datagen-custom-images.md  datagen-schema.md  deployment.md  development.md  getting-started.md  operators-and-catalogs.md  polaris-reference.md  query-reference.md  quickstart-polaris.md  recipes.md  running-pipelines.md  supported-components.md  troubleshooting.md
examples/: hive-delta-spark-none.yaml  hive-delta-spark-thrift.yaml  hive-delta-spark-trino.yaml  hive-iceberg-spark-duckdb.yaml  hive-iceberg-spark-none.yaml  hive-iceberg-spark-thrift.yaml  hive-iceberg-spark-trino.yaml  polaris-iceberg-spark-duckdb.yaml  polaris-iceberg-spark-none.yaml  polaris-iceberg-spark-thrift.yaml  polaris-iceberg-spark-trino.yaml
src/lakebench/: __init__.py  __main__.py  _constants.py  _resources.py  cli.py  init_wizard.py
src/lakebench/benchmark/: __init__.py  executor.py  queries.py  result.py  runner.py
src/lakebench/cli/: __init__.py  _clean.py  _compare.py  _config.py  _deploy.py  _destroy.py  _generate.py  _helpers.py  _prerequisites.py  _query.py  _run.py  _sustained.py
src/lakebench/config/: __init__.py  autosizer.py  loader.py  recipes.py  scale.py  schema.py
src/lakebench/deploy/: __init__.py  datagen.py  delta_maintenance.py  destroy.py  duckdb.py  engine.py  hive.py  iceberg.py  observability.py  polaris.py  postgres.py  rbac.py  spark_thrift.py  trino.py  unity.py
src/lakebench/engine/: __init__.py  protocol.py
src/lakebench/journal/: __init__.py  events.py  journal.py
src/lakebench/k8s/: __init__.py  client.py  security.py  wait.py
src/lakebench/metrics/: __init__.py  collector.py  storage.py
src/lakebench/modules/: __init__.py  base.py  registry.py
src/lakebench/modules/catalogs/: __init__.py
src/lakebench/modules/pipeline_engines/: __init__.py
src/lakebench/observability/: __init__.py  platform_collector.py  s3_metrics.py
src/lakebench/reports/: __init__.py  generator.py
src/lakebench/s3/: __init__.py  client.py
src/lakebench/spark/: __init__.py  job.py  monitor.py  operator.py
src/lakebench/templates/: namespace.yaml.j2  secrets.yaml.j2
tests/: __init__.py  conftest.py  test_autosizer.py  test_benchmark.py  test_characterization.py  test_cli.py  test_cli_runner.py  test_config.py  test_config_v2.py  test_delta_maintenance.py  test_deploy.py  test_deployers.py  test_e2e.py  test_executor_internals.py  test_functional_pipeline.py  test_functional_runner.py  test_functional_templates.py  test_functional_workflows.py  test_integration.py  test_integration_v050.py  test_journal.py  test_k8s.py  test_k8s_behavioral.py  test_metrics.py  test_observability.py  test_report_platform.py  test_s3.py  test_scale.py  test_spark.py  test_spark_scripts.py  test_v040.py  test_v050.py
(+77 files in other folders)
